Updated javascript game logic

--- a/blackjack1.html
+++ b/blackjack1.html
@@ -14,12 +14,12 @@
         <div>
             <p>Dealer's cards:</p>
             <p id="dealer-info">No cards.</p>
-            <p>Score:</p>
+            <p id="dealer-score"></p>
         </div>
         <div>
             <p>Player's cards:</p>
             <p id="player-info">No cards.</p>
-            <p>Score:</p>
+            <p id="player-score"></p>
         </div>
     </div>
     <button id="hit-button">Hit</button>
